templates/resources/keycloak-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: Issuer
    cert-manager.io/issuer-name: ${MY_ISSUER}
  name: keycloak-route
  namespace: ${MY_KEYCLOAK_NAMESPACE}
spec:
  host: keycloak.apps.${MY_CLUSTER_DOMAIN}
  tls:
    termination: reencrypt
    certificate: ""
    key: ""
    caCertificate: ""
    destinationCACertificate: ""
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: keycloak
